add jacoco config